--- a/style.css
+++ b/style.css
@@ -3,11 +3,9 @@ body {
   background-color: #f0f0f0;
   color: #333;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  height: 100vh;
   margin: 0;
-  
 }
 
 .container {
@@ -17,6 +15,8 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   width: 80%;
   max-width: 600px;
+  margin-bottom: 20px;
+  margin-top: 100px;
 }
 
 h1 {
@@ -54,16 +54,16 @@ h2 {
   text-decoration: underline;
 }
 
+
 .footer {
   color: rgb(0, 0, 0);
   text-align: center;
   padding: 10px 0;
+  margin-top: 20px; /* Adjust the value as needed */
   width: 100%;
-  position: fixed;
-  bottom: 0;
 }
 
-.util{
+.util {
   color: inherit;
-  text-decoration: none;   
+  text-decoration: none;
 }
