--- a/style.css
+++ b/style.css
@@ -15,8 +15,7 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   width: 80%;
   max-width: 600px;
-  margin-bottom: 20px;
-  margin-top: 100px;
+  margin-top: 30px;
 }
 
 h1 {
@@ -32,6 +31,7 @@ h2 {
   color: #000000;
   border-bottom: 2px solid #000000;
   padding-bottom: 5px;
+  position: relative;
 }
 
 .pdf-list {
@@ -42,6 +42,10 @@ h2 {
 
 .pdf-list li {
   margin: 10px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
 }
 
 .pdf-list a {
@@ -54,16 +58,86 @@ h2 {
   text-decoration: underline;
 }
 
-
 .footer {
   color: rgb(0, 0, 0);
   text-align: center;
   padding: 10px 0;
-  margin-top: 20px; /* Adjust the value as needed */
+  margin-top: 20px;
   width: 100%;
 }
 
 .util {
   color: inherit;
   text-decoration: none;
+}
+
+.progress {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight : 700;
+  cursor: pointer;
+  color: rgb(0, 0, 0);
+  position: relative; 
+}
+
+.span_misc {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight : 700;
+  cursor: pointer;
+  color: rgb(0, 0, 0); 
+}
+
+.Menu {
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight : bold;
+  font-size: 20px;
+}
+
+.Menu a {
+  text-decoration: none;
+  color: #2a2a2a;
+  font-weight: bold;
+}
+
+.label_style {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight : bold;
+  font-size: 16px;
+}
+
+.label_style {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight : bold;
+  font-size: 18px;
+}
+
+.input_style {
+  border-radius : 6px;
+  padding: 10px;
+  margin: 10px;
+}
+
+.btn {
+ background-color: #1a73e8;
+ padding: 10px;
+ text-align: center;
+ border-radius: 6px;
+ color: #FFFFFF;
+ border : none;
+ box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset,rgba(50, 50, 93, .1) 0 2px 5px 0,rgba(0, 0, 0, .07) 0 1px 1px 0;
+ font-size: 20px;
+ margin : 20px;
+}
+
+.btn:active {
+  background-color: #104488;
+  border-width: 4px 0 0;
+}
+
+.color_style {
+  height: 50px;
+  width: 100px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
 }
