--- a/style.css
+++ b/style.css
@@ -135,9 +135,11 @@ h2 {
 }
 
 .color_style {
-  height: 50px;
-  width: 100px;
-  background-color: transparent;
-  border: none;
+  margin: 10px;
+  block-size: 30px;
+  border-radius: 50%;
+  border-width: 1px;
+  border-style: solid ;
+  inline-size: 30px;
   cursor: pointer;
 }
