--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ h2 {
   color: rgb(0, 0, 0);
   text-align: center;
   padding: 10px 0;
-  margin-top: 20px;
+  margin-top: 10px;
   width: 100%;
 }
 
@@ -86,47 +86,55 @@ h2 {
   color: rgb(0, 0, 0); 
 }
 
-.Menu {
-  text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight : bold;
-  font-size: 20px;
+.form-group {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 5px;
 }
 
-.Menu a {
-  text-decoration: none;
-  color: #2a2a2a;
+.label_style {
+  font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
-}
-
-.label_style {
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight : bold;
   font-size: 16px;
-}
-
-.label_style {
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight : bold;
-  font-size: 18px;
+  width: 40%;
+  text-align: center;
+  padding-right: 10px;
 }
 
 .input_style {
-  border-radius : 6px;
-  padding: 10px;
-  margin: 10px;
+  width: 50%;
+  font: inherit;
+  border-style: double;
+  border-radius: 6px;
+  padding: 5px;
+  margin: 5px 0;
+  border-style: ridge;
+  text-align: center;
+}
+
+.color_style {
+  margin: 10px 0;
+  border-style: none;
+  background-color: transparent;
+  inline-size: 100px;
+  width: 52%;
+  height: 40px;
+  border-width: 4px;
+  cursor: pointer;
+  text-align: center;
 }
 
 .btn {
- background-color: #1a73e8;
- padding: 10px;
- text-align: center;
- border-radius: 6px;
- color: #FFFFFF;
- border : none;
- box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset,rgba(50, 50, 93, .1) 0 2px 5px 0,rgba(0, 0, 0, .07) 0 1px 1px 0;
- font-size: 20px;
- margin : 20px;
+  background-color: #1a73e8;
+  padding: 10px;
+  text-align: center;
+  border-radius: 6px;
+  color: #FFFFFF;
+  border: none;
+  box-shadow: rgba(50, 50, 93, 0.1) 0 0 0 1px inset, rgba(50, 50, 93, 0.1) 0 2px 5px 0, rgba(0, 0, 0, 0.07) 0 1px 1px 0;
+  font-size: 20px;
+  margin: 20px 0;
 }
 
 .btn:active {
@@ -134,12 +142,15 @@ h2 {
   border-width: 4px 0 0;
 }
 
-.color_style {
-  margin: 10px;
-  block-size: 30px;
-  border-radius: 50%;
-  border-width: 1px;
-  border-style: solid ;
-  inline-size: 30px;
-  cursor: pointer;
+.Menu {
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.Menu a {
+  text-decoration: none;
+  color: #2a2a2a;
+  font-weight: bold;
 }
