--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
   width: 80%;
   max-width: 600px;
   margin-top: 30px;
+  margin-bottom: 20px;
 }
 
 h1 {
@@ -153,4 +154,11 @@ h2 {
   text-decoration: none;
   color: #2a2a2a;
   font-weight: bold;
+}
+
+.form-group a {
+  text-decoration: none;
+  color: #000000;
+  font-weight: bold;
+  font-size: 20px;
 }
